# vanlav_krd_bot

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
script/: reforma.py  reforma2.py
vanlav_krd_bot/: __init__.py  bot.py  config.py  files.py  fsm.py  handlers.py  main.py
